ajustes de configuracion para jakarta